--- a/.github/workflows/ci-bot.yml
+++ b/.github/workflows/ci-bot.yml
@@ -1,4 +1,4 @@
-name: CI Bot - Build, Test, Report, Release
+name: CI Bot - Build, Test, Report, Update
 
 on:
   push:
@@ -7,10 +7,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  ci:
+  ci-bot:
     runs-on: ubuntu-latest
 
     steps:
+      # -------------------------
+      # Setup
+      # -------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -27,63 +30,35 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install flake8 pytest black
 
+      # -------------------------
+      # Checks
+      # -------------------------
       - name: Run Lint Check
         id: lint
-        run: flake8 backend tests
+        run: flake8 backend tests || true
 
       - name: Run Tests
         id: tests
-        run: pytest --maxfail=1 --disable-warnings -q
+        run: pytest --maxfail=1 --disable-warnings -q || true
 
       - name: Check Build (syntax)
         id: build
-        run: python -m py_compile backend/*.py
+        run: python -m py_compile backend/*.py || true
 
       # -------------------------
-      # Version bump + badges
-      # -------------------------
-      - name: Ensure VERSION file exists and bump version
-        id: version
-        if: success()
-        run: |
-          if [ ! -f VERSION ]; then
-            echo "0.0.0" > VERSION
-          fi
-          current=$(cat VERSION)
-          IFS='.' read -r major minor patch <<< "$current"
-          patch=$((patch+1))
-          new_version="$major.$minor.$patch"
-          echo "$new_version" > VERSION
-          echo "new_version=$new_version" >> $GITHUB_OUTPUT
-
-      - name: Generate Badges
-        if: success()
-        run: |
-          echo "![Build](https://github.com/${{ github.repository }}/actions/workflows/ci-bot.yml/badge.svg)" > badges.md
-          echo "![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)" >> badges.md
-          echo "![Python](https://img.shields.io/badge/Python-3.11-blue.svg)" >> badges.md
-          echo "![Version](https://img.shields.io/badge/Version-${{ steps.version.outputs.new_version }}-blue.svg)" >> badges.md
-
-      - name: Update README with badges
-        if: success()
-        run: |
-          sed -i '/<!-- badges:start -->/,/<!-- badges:end -->/d' README.md || true
-          (echo "<!-- badges:start -->"; cat badges.md; echo "<!-- badges:end -->"; cat README.md) > README_new.md
-          mv README_new.md README.md
-
-      # -------------------------
-      # Add Author & License Info
+      # Update Docs with Author
       # -------------------------
       - name: Add Author Info
-        if: success()
         run: |
           mkdir -p docs
           echo "## Author" > docs/AUTHORS.md
           echo "- Raja Muhammad Awais" >> docs/AUTHORS.md
           grep -q "## Author" README.md || echo -e "\n## Author\nRaja Muhammad Awais" >> README.md
 
+      # -------------------------
+      # Update License
+      # -------------------------
       - name: Update LICENSE with Author
-        if: success()
         run: |
           if [ -f LICENSE ]; then
             year=$(date +'%Y')
@@ -99,83 +74,52 @@ jobs:
             curl -s https://opensource.org/licenses/MIT | sed -n '/Permission is hereby granted/,/SOFTWARE./p' >> LICENSE
           fi
 
-      - name: Commit version + badges + author + license
-        if: success()
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "🤖 Auto CI: bump version, update badges, add author & license"
-          branch: main
-
       # -------------------------
-      # Auto Fix on Failures
+      # Auto Fix (if errors found)
       # -------------------------
       - name: Try Auto-Fix (format + lint)
-        if: failure()
         run: |
           echo "⚡ Attempting to auto-fix issues..."
           black backend tests || true
           flake8 backend tests || true
 
-      - name: Commit Auto-Fixes
-        if: failure()
+      # -------------------------
+      # Commit changes into bot branch
+      # -------------------------
+      - name: Commit changes to ci-bot branch
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "🤖 Auto CI: applied auto-fixes"
-          branch: main
+          commit_message: "🤖 CI Bot: fixes, license, author update"
+          branch: ci-bot/update
+          create_branch: true
+          push_options: --force
 
       # -------------------------
-      # Generate Changelog
+      # Create Pull Request into main
       # -------------------------
-      - name: Generate Changelog
-        id: changelog
-        if: success()
-        run: |
-          last_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          if [ -z "$last_tag" ]; then
-            git log --pretty=format:"- %s (%h)" > CHANGELOG.md
-          else
-            git log $last_tag..HEAD --pretty=format:"- %s (%h)" > CHANGELOG.md
-          fi
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          cat CHANGELOG.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      # -------------------------
-      # Create GitHub Release
-      # -------------------------
-      - name: Create GitHub Release
-        if: success()
-        uses: softprops/action-gh-release@v2
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
         with:
-          tag_name: v${{ steps.version.outputs.new_version }}
-          name: "Release v${{ steps.version.outputs.new_version }}"
+          branch: ci-bot/update
+          title: "🤖 CI Bot: Automated Fixes & Updates"
           body: |
-            🚀 Automated release by CI Bot
-            - Version: v${{ steps.version.outputs.new_version }}
-            - Build, tests, and checks passed ✅
+            This PR was created automatically by the CI Bot.
 
-            ## Changes
-            ${{ steps.changelog.outputs.changelog }}
+            ### Changes
+            - ✅ Lint/Tests checked
+            - 📜 Author/License updated (Raja Muhammad Awais)
+            - ⚡ Auto-fixes applied where possible
 
-            ## Author
-            Raja Muhammad Awais
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            Please review before merging.
+          labels: bot, automated-pr
+          base: main
 
       # -------------------------
-      # Report Issues if failed
+      # Auto-merge (optional)
       # -------------------------
-      - name: Generate CI Report
-        if: failure()
-        run: |
-          echo "## CI Report" > ci-report.md
-          echo "- ❌ One or more CI steps failed, auto-fix may not have resolved all issues." >> ci-report.md
-          echo "- Please check logs: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> ci-report.md
-
-      - name: Report Issues if Failed
-        if: failure()
-        uses: peter-evans/create-issue-from-file@v5
+      - name: Auto Merge PR
+        if: success()
+        uses: peter-evans/enable-pull-request-automerge@v3
         with:
-          title: "⚠️ CI Check Failed"
-          content-filepath: ./ci-report.md
-          labels: bug, automated-report
+          pull-request-number: ${{ steps.create_pull_request.outputs.pull-request-number }}
+          merge-method: squash
